@@ -40,6 +40,8 @@
    platform.c.
  - (dtucker) [platform.c session.c] Move PAM credential establishment for the
    non-LOGIN_CAP case into platform.c.
+ - (dtucker) [platform.c platform.h session.c] Move the Cygwin special-case
+   check into platform.c
 
 20101025
  - (tim) [openbsd-compat/glob.h] Remove sys/cdefs.h include that came with
